feat:studio Description page design completed

--- a/src/app/core/component/master/master.component.html
+++ b/src/app/core/component/master/master.component.html
@@ -2,7 +2,7 @@
   <div>
     <app-header></app-header>
   </div>
-  <div class="flex-grow-1 overflow-auto">
+  <div class="flex-grow-1 overflow-hidden">
     <router-outlet></router-outlet>
   </div>
 </div>
