--- a/src/app/home-container/home-presentation/home-presentation.component.html
+++ b/src/app/home-container/home-presentation/home-presentation.component.html
@@ -1,4 +1,4 @@
-<main class="h-100 d-flex flex-column">
+<main class="h-100 d-flex flex-column overflow-auto">
     <!-- Carousel Container -->
     <div class="container">
         <div class="row gx-0">
