--- a/src/app/studio/studio-description-container/studio-description-presentation/studio-description-presentation.component.html
+++ b/src/app/studio/studio-description-container/studio-description-presentation/studio-description-presentation.component.html
@@ -1,1 +1,130 @@
-<p>studio-description-presentation works!</p>
+<section class="h-100 overflow-auto p-2 p-sm-4 ">
+    <!-- image section -->
+    <div class="studio-wrapper d-flex">
+        <div class="image-section me-0 me-lg-3">
+            <!-- Big image  wraperr-->
+            <div class="studio-big-image-wrapper overflow-hidden ">
+                <img src="./../../../../assets/images/studio-description-big-image.svg" class="w-100 h-auto rounded">
+            </div>
+            <!-- five image wrapper -->
+            <div class="d-flex align-items-center">
+                <div class="studio-small-image-wrapper   overflow-hidden rounded">
+                    <img src="./../../../../assets/images/studio-description-image-1.svg"
+                        class="w-100 h-auto object-fit-contain">
+                </div>
+                <div class="studio-small-image-wrapper   overflow-hidden rounded">
+                    <img src="./../../../../assets/images/studio-description-image-2.svg" class="w-100 h-auto">
+                </div>
+                <div class="studio-small-image-wrapper   overflow-hidden rounded">
+                    <img src="./../../../../assets/images/studio-description-image-3.svg" class="w-100 h-auto">
+                </div>
+                <div class="studio-small-image-wrapper   overflow-hidden rounded">
+                    <img src="./../../../../assets/images/studio-description-image-4.svg" class="w-100 h-auto">
+                </div>
+                <div class="studio-small-image-wrapper   overflow-hidden rounded">
+                    <img src="./../../../../assets/images/studio-description-image-5.svg" class="w-100 h-auto">
+                </div>
+            </div>
+        </div>
+        <!-- Description section -->
+        <div class="description-section mt-4 mt-lg-0 w-100">
+            <div class=" row gx-0">
+                <div class="col-12">
+                    <h3 class="studio-heading text-uppercase fw-bold">Creative space
+                        <span class="text-uppercase user-description-name">studio</span>
+                    </h3>
+                    <p class="studio-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam reiciendis voluptates in iusto
+                        aliquid magnam earum qui totam esse laborum.</p>
+                </div>
+            </div>
+            <div class=" row gx-0 g-sm-3">
+                <div class="col-12 col-sm-6">
+                    <div class="d-flex align-items-center border  p-2 p-sm-3 mt-3">
+                        <span class="icon-clock fs-4 "></span>
+                        <div class="d-flex flex-column ms-3">
+                            <span class="text-uppercase text-secondary-gray">timing</span>
+                            <span>10am-6pm</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6">
+                    <div class="d-flex align-items-center border p-2 p-sm-3 mt-3">
+                        <span class="icon-Calender-2 fs-4 "></span>
+                        <div class="d-flex flex-column ms-3">
+                            <span class="text-uppercase text-secondary-gray">open from</span>
+                            <span>monday-Saturday</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class=" row gx-0">
+                <div class="col-12">
+                    <div class="d-flex align-items-center border  p-2 p-sm-3 mt-3">
+                        <span class="icon-location fs-4 "></span>
+                        <div class="d-flex flex-column ms-3 ">
+                            <span class="text-uppercase  text-secondary-gray">address</span>
+                            <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas commodi dolorem neque
+                                aliquid consectetur! Labore temporibus saepe suscipit?</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class=" row gx-0">
+                <div class="col-12">
+                    <div class="d-flex align-items-center border  p-2 p-sm-3 mt-3">
+                        <span class="icon-money fs-4 "></span>
+                        <div class="d-flex flex-column  ms-3">
+                            <span class="text-uppercase text-secondary-gray">prices</span>
+                            <div class="mt-3">
+                                <div class="d-inline-block  ">
+                                    <div class="d-flex align-items-center">   
+                                        <div class="fw-bold">Jam: </div>
+                                    <div class="bg-secondary-gray fw-bold  rounded text-primary bg-primary-color p-2 me-3 ms-1 mt-1">3000 Rs/Day</div></div>
+                                 
+                                </div>
+                                <div class="d-inline-block  align-items-center">
+                                    <div class="d-flex align-items-center">  
+                                    <div class="fw-bold">Record: </div>
+                                    <div  class="bg-secondary-gray fw-bold rounded text-primary bg-primary-color  p-2 me-3 ms-1 mt-1">4000 Rs/Day</div>
+                                    </div>
+                                </div>
+                                <div class="d-inline-block  align-items-center">
+                                    <div class="d-flex align-items-center">  
+                                    <div class="fw-bold">Mix & Master: </div>
+                                    <div  class="bg-secondary-gray fw-bold  rounded text-primary bg-primary-color p-2 me-3 ms-1 mt-1">5000 Rs/Day</div>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class=" row gx-0">
+                <div class="col-12">
+                    <div class="d-flex align-items-center border  p-2 p-sm-3 mt-3">
+                        <span class="icon-setting fs-4 "></span>
+                        <div class="d-flex flex-column ms-3">
+                            <span class="text-uppercase  text-secondary-gray">hardware & equipments</span>
+                            <div class="mt-3">
+                                    <div class="d-inline-block  bg-secondary-gray fw-bold p-2 me-1 me-sm-3 fs-6 rounded mt-1">Microphones</div>   
+                                    <div class=" d-inline-block bg-secondary-gray fw-bold p-2 me-1 me-sm-3 rounded mt-1">Microphones</div>     
+                                    <div class=" d-inline-block bg-secondary-gray fw-bold p-2 me-1 me-sm-3 rounded mt-1">Microphones</div>
+                                    <div class=" d-inline-block bg-secondary-gray fw-bold p-2 me-1 me-sm-3 rounded mt-1">Microphones</div>
+                                    <div class=" d-inline-block bg-secondary-gray fw-bold p-2 me-1 me-sm-3 rounded mt-1">Microphones</div>                          
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class=" row gx-0">
+                <div class="col-12">
+                    <div class="button my-5 my-lg-3 d-flex justify-content-end ">
+                        <button type="submit" class="btn btn-primary btn-gradient border-0 fw-bold">Book Now</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
