--- a/src/assets/icons/style.css
+++ b/src/assets/icons/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?yjnzo2');
-  src:  url('fonts/icomoon.eot?yjnzo2#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?yjnzo2') format('truetype'),
-    url('fonts/icomoon.woff?yjnzo2') format('woff'),
-    url('fonts/icomoon.svg?yjnzo2#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?z81uuq');
+  src:  url('fonts/icomoon.eot?z81uuq#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?z81uuq') format('truetype'),
+    url('fonts/icomoon.woff?z81uuq') format('woff'),
+    url('fonts/icomoon.svg?z81uuq#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -26,8 +26,63 @@
 }
 
 .icon-menu:before {
-  content: "\e9bd";
+  content: "\e900";
 }
 .icon-close:before {
-  content: "\ea0f";
+  content: "\e901";
+}
+.icon-setting:before {
+  content: "\e902";
+}
+.icon-location:before {
+  content: "\e903";
+}
+.icon-money:before {
+  content: "\e904";
+}
+.icon-Calender-2:before {
+  content: "\e905";
+}
+.icon-clock:before {
+  content: "\e906";
+}
+.icon-delete:before {
+  content: "\e907";
+}
+.icon-calender:before {
+  content: "\e908";
+}
+.icon-delete-white:before {
+  content: "\e909";
+  color: #fff;
+}
+.icon-harts:before {
+  content: "\e90a";
+}
+.icon-log-out:before {
+  content: "\e90b";
+}
+.icon-manage-studio:before {
+  content: "\e90c";
+}
+.icon-profile:before {
+  content: "\e90d";
+}
+.icon-search:before {
+  content: "\e90e";
+}
+.icon-Vector-2:before {
+  content: "\e90f";
+}
+.icon-mic:before {
+  content: "\e910";
+}
+.icon-calender-3:before {
+  content: "\e911";
+}
+.icon-Artist:before {
+  content: "\e912";
+}
+.icon-Studio:before {
+  content: "\e913";
 }
