--- a/src/app/artist/artist-description-container/artist-description-presentation/artist-description-presentation.component.html
+++ b/src/app/artist/artist-description-container/artist-description-presentation/artist-description-presentation.component.html
@@ -1,1 +1,145 @@
-<p>artist-description-presentation works!</p>
+<!-- artist description -->
+<section class="h-100 overflow-auto p-2 p-sm-4 ">
+    <!-- image section -->
+    <div class="artist-wrapper d-flex">
+        <div class="image-section me-0 me-lg-3">
+            <!-- Big image  wraperr-->
+            <div class="artist-big-image-wrapper overflow-hidden ">
+                <img src="./../../../../assets/images/artist-big-image.svg" class="w-100 h-auto rounded">
+            </div>
+            <!-- five image wrapper -->
+            <div class="d-flex align-items-center">
+                <div class="artist-small-image-wrapper   overflow-hidden rounded">
+                    <img src="./../../../../assets/images/artist-1.svg" class="w-100 h-auto object-fit-contain">
+                </div>
+                <div class="artist-small-image-wrapper overflow-hidden rounded">
+                    <img src="./../../../../assets/images/artist-2.svg" class="w-100 h-auto rounded">
+                </div>
+                <div class="artist-small-image-wrapper   overflow-hidden rounded">
+                    <img src="./../../../../assets/images/artist-3.svg" class="w-100 h-auto rounded">
+                </div>
+                <div class="artist-small-image-wrapper   overflow-hidden rounded">
+                    <img src="./../../../../assets/images/artist-4.svg" class="w-100 h-auto rounded">
+                </div>
+                <div class="artist-small-image-wrapper   overflow-hidden rounded">
+                    <img src="./../../../../assets/images/artist-5.svg" class="w-100 h-auto rounded">
+                </div>
+            </div>
+        </div>
+        <!-- Description section -->
+        <div class="description-section mt-4 mt-lg-0 w-100">
+            <div class=" row gx-0">
+                <div class="col-12">
+                    <h3 class="artist-heading text-uppercase fw-bold">Creative space
+                        <span class="text-uppercase user-description-name">Singer</span>
+                    </h3>
+                    <em class=" text-secondary-gray">Available for Events and Music Classes</em>
+                    <p class="artist-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam
+                        reiciendis voluptates in iusto
+                        aliquid magnam earum qui totam esse laborum.</p>
+                </div>
+            </div>
+            <div class=" row gx-0 g-sm-3">
+                <div class="col-12 col-sm-6">
+                    <div class="d-flex align-items-center border  p-2 p-sm-3 mt-3">
+                        <span class="icon-mic fs-4 "></span>
+                        <div class="d-flex flex-column ms-3">
+                            <span class="text-uppercase text-secondary-gray">Performance Type</span>
+                            <span class="fw-bold">Solo Performer</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6">
+                    <div class="d-flex align-items-center border p-2 p-sm-3 mt-3">
+                        <span class="icon-Calender-2 fs-4 "></span>
+                        <div class="d-flex flex-column ms-3">
+                            <span class="text-uppercase text-secondary-gray">open from</span>
+                            <span class="fw-bold">Monday-Saturday</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class=" row gx-0">
+                <div class="col-12">
+                    <div class="d-flex align-items-center border  p-2 p-sm-3 mt-3">
+                        <span class="icon-money fs-4 "></span>
+                        <div class="d-flex flex-column  ms-3">
+                            <span class="text-uppercase text-secondary-gray">prices</span>
+                            <div class="mt-3">
+                                <div class="d-inline-block  ">
+                                    <div class="d-flex align-items-center">
+                                        <div class="fw-bold">Solo performer:: </div>
+                                        <div
+                                            class="bg-secondary-gray fw-bold  rounded text-primary bg-primary-color p-2 me-3 ms-1 mt-1">
+                                            3000 Rs/Day</div>
+                                    </div>
+
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class=" row gx-0">
+                <div class="col-12">
+                    <div class="d-flex align-items-center border  p-2 p-sm-3 mt-3">
+                        <span class="icon-Vector-2 fs-4 "></span>
+                        <div class="d-flex flex-column ms-3">
+                            <div class="d-flex align-items-center">
+                                <span class="text-uppercase text-secondary-gray">music classes</span>
+                                <div
+                                    class="bg-secondary-gray fw-bold  rounded text-primary bg-primary-color p-2 me-3 ms-1 mt-1 ms-2">
+                                    4pm - 6pm</div>
+                                <div
+                                    class="bg-secondary-gray fw-bold  rounded text-primary bg-primary-color p-2 me-3 ms-1 mt-1">
+                                    Monday - Saturday</div>
+                            </div>
+
+                            <div class="mt-3">
+                                <div class="d-inline-block  ">
+                                    <div class="d-flex align-items-center">
+                                        <div class="fw-bold">Bass Guitar: </div>
+                                        <div
+                                            class="bg-secondary-gray fw-bold  rounded text-primary bg-primary-color p-2 me-3 ms-1 mt-1">
+                                            1000 Rs/Class</div>
+                                    </div>
+
+                                </div>
+                                <div class="d-inline-block  ">
+                                    <div class="d-flex align-items-center">
+                                        <div class="fw-bold">Drums: </div>
+                                        <div
+                                            class="bg-secondary-gray fw-bold  rounded text-primary bg-primary-color p-2 me-3 ms-1 mt-1">
+                                            1500 Rs/Day</div>
+                                    </div>
+
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class=" row gx-0">
+                <div class="col-12">
+                    <div class="d-flex align-items-center border  p-2 p-sm-3 mt-3">
+                        <span class="icon-location fs-4 "></span>
+                        <div class="d-flex flex-column ms-3 ">
+                            <span class="text-uppercase  text-secondary-gray">address</span>
+                            <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas commodi dolorem neque
+                                aliquid consectetur! Labore temporibus saepe suscipit?</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class=" row gx-0">
+                <div class="col-12">
+                    <div class="button my-5 my-lg-3 d-flex justify-content-end ">
+                        <button type="submit" class="btn btn-primary btn-gradient border-0 fw-bold">Book Now</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
