feat:artist-List-Page-Design-completed

--- a/src/app/core/component/header/header.component.html
+++ b/src/app/core/component/header/header.component.html
@@ -1,14 +1,14 @@
 <!-- start Header -->
 <header>
-  <div class="d-flex justify-content-between align-items-center p-2">
+  <div class="d-flex justify-content-between align-items-center p-2 ">
     <!-- 1rhythm Logo -->
-    <div class="logo ms-3">
+    <div class="logo ms-3 cursor-pointer">
       <img src="./../../../../assets/images/1Rhythm logo.svg" alt="1Rhythm logo" />
     </div>
     <!-- End 1rhythm Logo -->
 
     <!-- desktop -->
-    <div class="d-none d-md-block">
+    <div class="d-none d-md-block cursor-pointer">
       <ul class="nav">
         <li class="nav-item d-flex align-items-center">
           <img src="./../../../../assets/images/home.svg" alt="home-icon" />
@@ -29,7 +29,7 @@
       </ul>
     </div>
     <!-- Profile Image -->
-    <div class="profile-image overflow-hidden d-none d-md-block me-3">
+    <div class="profile-image overflow-hidden d-none d-md-block me-3 cursor-pointer">
       <img src="./../../../../assets/images/Profile.png" alt="profile-image" class="w-100 h-auto" />
     </div>
     <!-- desktop -->
