--- a/src/app/home-container/home-presentation/home-presentation.component.html
+++ b/src/app/home-container/home-presentation/home-presentation.component.html
@@ -94,12 +94,12 @@
             <!-- header section -->
             <div class="d-flex justify-content-between align-items-center pt-4">
                 <h3 class="fw-bold">Explore Studios</h3>
-                <a class="text-primary fw-bold" routerLink="/studio/studio-list">SEE ALL</a>
+                <a class="text-primary fw-bold cursor-pointer" routerLink="/studio/studio-list ">SEE ALL</a>
             </div>
             <!-- card main wrapper -->
-            <div class="row  ">
+            <div class="row ">
                 <!-- card 1 -->
-                <div class="col-12 col-sm-6 col-md-4 col-lg-2 mt-3" *ngFor="let i of [1,2,3,4,5,6]">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-2 my-3" *ngFor="let i of [1,2,3,4,5,6]">
                     <app-card></app-card>
                 </div>
                 
@@ -114,12 +114,12 @@
             <!-- header section -->
             <div class="d-flex justify-content-between align-items-center pt-4">
                 <h3 class="fw-bold">Explore Artist</h3>
-                <a href="#" class="text-primary fw-bold">SEE ALL</a>
+                <a  class="text-primary fw-bold cursor-pointer" routerLink="/artist/artist-list">SEE ALL</a>
             </div>
             <!-- card main wrapper -->
             <div class="row  ">
                 <!-- card 1 -->
-                <div class="col-12 col-sm-6 col-md-4 col-lg-2 mt-3" *ngFor="let i of [1,2,3,4,5,6]">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-2 my-3" *ngFor="let i of [1,2,3,4,5,6]">
                     <app-card></app-card>
                 </div>
                 
