--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -9,8 +9,8 @@
         <form>
             <!-- profile image select Section -->
             <div class="row">
-                <div class="col-12 my-3 my-lg-4">
-                    <label for="select-image" class="position-relative">
+                <div class="col-12 my-3 my-lg-4 ">
+                    <label for="select-image" class="position-relative cursor-pointer">
                         <div class="profile-image overflow-hidden">
                             <img src="./../../assets/images/registration-profile-vector.png" alt="vector-image"
                                 width="w-100 h-100">
