--- a/src/app/shared/card/card.component.html
+++ b/src/app/shared/card/card.component.html
@@ -13,7 +13,7 @@
         </div>
         <!-- button -->
         <div class="button">
-            <button type="button" class="btn btn-outline-secondary fw-lighter w-100">View
+            <button type="button" class="btn btn-outline-secondary fw-lighter w-100" routerLink="/studio/studio-description">View
                 Details</button>
         </div>
     </div>
