--- a/src/assets/scss/base/_global.scss
+++ b/src/assets/scss/base/_global.scss
@@ -39,6 +39,9 @@ body {
 .fs-8{
 font-size: 12px;
 }
+.cursor-pointer{
+ cursor: pointer;
+}
 // import style ng-select
 @import "~@ng-select/ng-select/themes/default.theme.css";
 
