--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,8 @@
 /* Importing Bootstrap SCSS file. */
 @import "assets/scss/base/index";
 @import "assets/scss/componet/index";
+
+@import '@angular/cdk/overlay-prebuilt.css';
 @import "assets/scss/vandar/index";
 @import "assets/scss/layout/index";
 @import "assets/scss/utility/index";
