feat:Studio-Book-Form-Design-completed

--- a/src/app/studio/studio-booking-form-container/studio-booking-form-presentation/studio-booking-form-presentation.component.html
+++ b/src/app/studio/studio-booking-form-container/studio-booking-form-presentation/studio-booking-form-presentation.component.html
@@ -1,1 +1,61 @@
-<p>studio-booking-form-presentation works!</p>
+<!-- studio-booking-from -->
+<div class="studio-book-form-wrapper d-flex flex-column bg-white h-100  position-absolute end-0 p-4">
+    <div class="header">
+        <div class="d-flex align-items-center justify-content-between">
+            <h3>Book Now</h3>
+            <span class="icon-close cursor-pointer fw-bold" (click)="closeForm()"></span>
+        </div>
+        <span class="fs-8">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </span>
+    </div>
+    <form class="flex-grow-1">
+        <div class="h-100 d-flex flex-column align-items-center justify-content-between">
+            <div class="row">
+                <!-- fullname -->
+                <div class="col-12">
+                    <div class="form-group mt-3 mt-sm-5">
+                        <label for="FullName" class="fw-bold ">FullName <span class="text-danger"> *</span></label>
+                        <input type="text" class="form-control" id="FullName" placeholder="FullName">
+                    </div>
+                </div>
+                <!-- phone number -->
+                <div class="col-12">
+                    <div class="form-group mt-3">
+                        <label for="PhoneNumber" class="fw-bold ">Phone Number <span class="text-danger"> *</span></label>
+                        <input type="text" class="form-control" id="PhoneNumber" placeholder="Phone Number">
+                    </div>
+                </div>
+                 <!-- Date number -->
+                 <div class="col-12">
+                    <div class="form-group mt-3">
+                        <label for="date" class="fw-bold ">Select Date<span class="text-danger"> *</span></label>
+                        <input type="date" class="form-control" id="date" >
+                    </div>
+                </div>
+                <!-- Select Service Type -->
+                <div class="col-12 ">
+                    <div class="form-group mt-3">
+                        <label for="Select" class="fw-bold ">Select Service Type <span class="text-danger">
+                                *</span></label>
+                        <ng-select placeholder="Select Service Type">
+                            <ng-option *ngFor="let user of userTypes" [value]="user.id">{{user.name}}</ng-option>
+                        </ng-select>
+                    </div>
+                </div>
+                <!--Additional Requirements  -->
+                <div class="col-12 ">
+                    <div class="mt-3">
+                        <label for="s" class="fw-bold ">Additional Requirements <span class="text-danger">
+                            *</span></label>
+                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                      </div>
+                </div>
+            </div>
+            <!-- submit and Cancel button -->
+            <div class="button my-5 my-lg-3 d-flex justify-content-center ">
+                <button type="button" class="btn btn-outline-info me-3">Cancel</button>
+                <button type="submit" class="btn btn-primary btn-gradient border-0 text-nowrap ">Sign Up</button>
+            </div>
+        </div>
+    </form>
+          
+</div>
