--- a/src/app/studio/studio-booking-form-container/studio-booking-form-presentation/studio-booking-form-presentation.component.html
+++ b/src/app/studio/studio-booking-form-container/studio-booking-form-presentation/studio-booking-form-presentation.component.html
@@ -1,5 +1,5 @@
 <!-- studio-booking-from -->
-<div class="studio-book-form-wrapper d-flex flex-column bg-white h-100  position-absolute end-0 p-4">
+<div class="studio-book-form-wrapper d-flex flex-column bg-white  position-absolute h-100 end-0 p-2 p-sm-4 overflow-auto">
     <div class="header">
         <div class="d-flex align-items-center justify-content-between">
             <h3>Book Now</h3>
@@ -9,7 +9,7 @@
     </div>
     <form class="flex-grow-1">
         <div class="h-100 d-flex flex-column align-items-center justify-content-between">
-            <div class="row">
+            <div class="row g-0" >
                 <!-- fullname -->
                 <div class="col-12">
                     <div class="form-group mt-3 mt-sm-5">
@@ -32,7 +32,7 @@
                     </div>
                 </div>
                 <!-- Select Service Type -->
-                <div class="col-12 ">
+                <div class="col-12">
                     <div class="form-group mt-3">
                         <label for="Select" class="fw-bold ">Select Service Type <span class="text-danger">
                                 *</span></label>
