--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -2,28 +2,26 @@ header {
     .logo {
         img {
             width: $header-logo-image-width;
-
             @media (max-width: 992px) {
                 width: $header-logo-image-width-lg;
             }
-
         }
     }
-
     .profile-image {
         width: $profile-image-width;
         height: $profile-image-height;
         border-radius: $profile-image-Border-radius;
     }
 }
-
 .sidebar {
     position: absolute;
     transition: all 0.5s ease-in-out;
     left: 100%;
     z-index: 100;
+    height: 400px;
+    visibility: hidden;
 }
-
 #menuOpen:checked+.sidebar {
     left: 0;
+   visibility: visible;
 }
