feat:/Artist-Book-Form-Design-Event complete with Responsive

--- a/src/app/artist/artist-description-container/artist-description-presentation/artist-description-presentation.component.html
+++ b/src/app/artist/artist-description-container/artist-description-presentation/artist-description-presentation.component.html
@@ -136,7 +136,7 @@
             <div class=" row gx-0">
                 <div class="col-12">
                     <div class="button my-5 my-lg-3 d-flex justify-content-end ">
-                        <button type="submit" class="btn btn-primary btn-gradient border-0 fw-bold">Book Now</button>
+                        <button type="submit" class="btn btn-primary btn-gradient border-0 fw-bold" (click)="bookArtist()">Book Now</button>
                     </div>
                 </div>
             </div>
