--- a/src/app/studio/studio-booking-form-container/studio-booking-form-presentation/studio-booking-form-presentation.component.html
+++ b/src/app/studio/studio-booking-form-container/studio-booking-form-presentation/studio-booking-form-presentation.component.html
@@ -1,4 +1,4 @@
-<!-- studio-booking-from -->
+<!-- studio-booking-form -->
 <div class="studio-book-form-wrapper d-flex flex-column bg-white  position-absolute h-100 end-0 p-2 p-sm-4 overflow-auto">
     <div class="header">
         <div class="d-flex align-items-center justify-content-between">
@@ -53,7 +53,7 @@
             <!-- submit and Cancel button -->
             <div class="button my-5 my-lg-3 d-flex justify-content-center ">
                 <button type="button" class="btn btn-outline-info me-3">Cancel</button>
-                <button type="submit" class="btn btn-primary btn-gradient border-0 text-nowrap ">Sign Up</button>
+                <button type="submit" class="btn btn-primary btn-gradient border-0 text-nowrap ">Book Now</button>
             </div>
         </div>
     </form>
