--- a/src/app/core/component/profile-menu/profile-menu.component.html
+++ b/src/app/core/component/profile-menu/profile-menu.component.html
@@ -14,15 +14,15 @@
         </li>
         <li class="nav-item d-flex align-items-center w-100 p-1">
             <span class="icon-profile fs-4"></span>
-            <a href="" class="nav-link">Manage Profile</a>
+            <a class="nav-link" routerLink="manage-profile">Manage Profile</a>
         </li>
         <li class="nav-item d-flex align-items-center  w-100 p-1">
             <span class="icon-manage-studio fs-4"></span>
-            <a href="" class="nav-link">Manage Studio Profile</a>
+            <a href="#" class="nav-link">Manage Studio Profile</a>
         </li>
         <li class="nav-item d-flex align-items-center  w-100 p-1">
             <span class="icon-log-out fs-4"></span>
-            <a href="" class="nav-link">Log out</a>
+            <a href="#" class="nav-link">Log out</a>
         </li>
     </ul>
    </div>
